


v. 1.8.11 (The Future)
----------------------------------------------------

		
		
	* Change: 
		Now pulling segue version information from the changelog instead of the
		version.txt file.
		(2007-10-09 - Adam Franco)
	
v. 1.8.10 (2007-10-05)
----------------------------------------------------

		
	* Bug Fix: #1808317 
		Move/Copy UI now works.
		(2007-10-05 - Adam Franco)
		
	* Bug Fix: #1808405 
		Cancel buttons in story and page wizards are now working.
		(2007-10-05 - Adam Franco)
		
	* Bug Fix: #1808316 
		Reordering of content blocks now works.
		(2007-10-05 - Adam Franco)
		
	* Bug Fix: #1808315 
		Comparing and reverting of versions now works.
		(2007-10-05 - Adam Franco)
		
	* Bug Fix: #1808314 
		Delete Site now works.
		(2007-10-05 - Adam Franco)
		
	* Change: #1808390 
		Minor Updates to documentation
		(2007-10-05 - Adam Franco)
		
	* Change: #1808391 
		Minor Updates to documentation
		(2007-10-05 - Adam Franco)
	
v. 1.8.9 (2007-10-02)
----------------------------------------------------

		
	* Bug Fix: 
		Fixed "invalid ltype" error when not authenticated.
		(2007-10-02 - Adam Franco)
	
v. 1.8.8 (2007-10-02)
----------------------------------------------------
This release includes a fix for the remote code inclusion vulnerability found
yesterday and fixes all of the known bugs related to the new lack of global request
variables. See the change log for details.
		
		
	* Change: 
		Went through each and every variable-include statement -- found by grepping
		for /(include|require)(_once)?\s*\([^;]*\$/ -- and made sure that every
		variable parameter into the include path has been filtered to prevent
		directory or network traversal.
		(2007-10-02 - Adam Franco)
		
	* Change: 
		The themes directory is no longer configurable.
		(2007-10-02 - Adam Franco)
		
	* Bug Fix: 
		Add Students UI is now working.
		(2007-10-02 - Adam Franco)
		
	* Bug Fix: 
		Username lookup is now working.
		(2007-10-02 - Adam Franco)
		
	* Bug Fix: 