@@ -36,25 +36,25 @@
 <ul>
 		<li>
 <b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1808317&amp;group_id=82171&amp;atid=565234">
-        			#1808317</a> Move/Copy UI now works. (<em>2007-10-05 - Adam Franco</em>)</li>
+        			#1808317</a> Move/Copy UI now works. (<em>2007-10-05 - Adam Franco</em>)<br> (<em>reported by Melanie Hoag of Southwestern University</em>)</li>
 		<li>
 <b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1808405&amp;group_id=82171&amp;atid=565234">
         			#1808405</a> Cancel buttons in story and page wizards are now working. (<em>2007-10-05 - Adam Franco</em>)</li>
 		<li>
 <b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1808316&amp;group_id=82171&amp;atid=565234">
-        			#1808316</a> Reordering of content blocks now works. (<em>2007-10-05 - Adam Franco</em>)</li>
+        			#1808316</a> Reordering of content blocks now works. (<em>2007-10-05 - Adam Franco</em>)<br> (<em>reported by Melanie Hoag of Southwestern University</em>)</li>
 		<li>
 <b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1808315&amp;group_id=82171&amp;atid=565234">
-        			#1808315</a> Comparing and reverting of versions now works. (<em>2007-10-05 - Adam Franco</em>)</li>
+        			#1808315</a> Comparing and reverting of versions now works. (<em>2007-10-05 - Adam Franco</em>)<br> (<em>reported by Melanie Hoag of Southwestern University</em>)</li>
 		<li>
 <b>Bug Fix:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1808314&amp;group_id=82171&amp;atid=565234">
-        			#1808314</a> Delete Site now works. (<em>2007-10-05 - Adam Franco</em>)</li>
+        			#1808314</a> Delete Site now works. (<em>2007-10-05 - Adam Franco</em>)<br> (<em>reported by Melanie Hoag of Southwestern University</em>)</li>
 		<li>
 <b>Change:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1808390&amp;group_id=82171&amp;atid=565234">
-        			#1808390</a> Minor Updates to documentation (<em>2007-10-05 - Adam Franco</em>)</li>
+        			#1808390</a> Minor Updates to documentation (<em>2007-10-05 - Adam Franco</em>)<br> (<em>reported by Mike Edwards of University of Illinois Urbana Champaign</em>)</li>
 		<li>
 <b>Change:</b><a href="http://sourceforge.net/tracker/index.php?func=detail&amp;aid=1808391&amp;group_id=82171&amp;atid=565234">
-        			#1808391</a> Minor Updates to documentation (<em>2007-10-05 - Adam Franco</em>)</li>
+        			#1808391</a> Minor Updates to documentation (<em>2007-10-05 - Adam Franco</em>)<br> (<em>reported by Mike Edwards of University of Illinois Urbana Champaign</em>)</li>
 	</ul>
 <br><h2>Version 1.8.9</h2>
 <h3>2007-10-02</h3>
@@ -322,13 +322,13 @@
 <h3>2006-11-15</h3>
 <ul>
 		<li>
-<b>Bug Fix:</b> Added a check for a non-zero length password to prevent login from occuring without a password when the LDAP server is configured to allow anonymous binding. Thank you to Melanie Hoag and her team at Southwestern University for help locating this bug. (<em>Adam Franco</em>)</li>
+<b>Bug Fix:</b> Added a check for a non-zero length password to prevent login from occuring without a password when the LDAP server is configured to allow anonymous binding. Thank you to Melanie Hoag and her team at Southwestern University for help locating this bug. (<em>Adam Franco</em>)<br> (<em>reported by Melanie Hoag of Southwestern University</em>)</li>
 	</ul>
 <br><h2>Version 1.5.10</h2>
 <h3>2006-10-25</h3>
 <ul>
 		<li>
-<b>Bug Fix:</b> Added exit() statements after sending redirect headers to prevent continued execution that was resulting in an authentication race-condition that had the effect of populating empty class-lists for students and professors. Thank you to Melanie Hoag and her team at Southwestern University for help locating this bug. (<em>Adam Franco</em>)</li>
+<b>Bug Fix:</b> Added exit() statements after sending redirect headers to prevent continued execution that was resulting in an authentication race-condition that had the effect of populating empty class-lists for students and professors. Thank you to Melanie Hoag and her team at Southwestern University for help locating this bug. (<em>Adam Franco</em>)<br> (<em>reported by Melanie Hoag of Southwestern University</em>)</li>
 	</ul>
 <br><h2>Version 1.5.9</h2>
 <h3>2006-10-24</h3>
